src/test/test-models/bad/compound-assign/plus_equals_bad_var_rhs.stan
functions {
  void foo(real a1) {
    int lf2;
    lf2 += a2;
  }
}
